# ReviewBuudyAI1

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 44533a53e136_add_self_reported_posted.py  5a068755fcde_add_presentation_mode_to_feedback_.py  9d4c35d45e6d_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  businesses.py  complaints.py  flow.py  router.py
backend/app/core/: exceptions.py  security.py
backend/app/models/: __init__.py  billing.py  business.py  feedback.py  reward.py  user.py
backend/app/schemas/: auth.py  business.py  complaint.py  flow.py
backend/app/services/: ai_conversation.py  deepgram_proxy.py  email_service.py  fingerprint_service.py  review_writer.py  reward_service.py
backend/tests/: conftest.py  test_acceptance.py  test_complaints.py  test_flow.py  test_services.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  client.ts  complaints.ts  dashboard.ts  flow.ts
frontend/src/components/dashboard/: ProfileDropdown.tsx
frontend/src/components/feedback/: CameraConversationStep.tsx  ConsentStep.tsx  ContactCollectionStep.tsx  ConversationStep.tsx  EmpathyStep.tsx  RewardStep.tsx  (+4 more)
frontend/src/hooks/: useAudioRecorder.ts  useCamera.ts  useFingerprint.ts  useHeyGenAvatar.ts
frontend/src/stores/: authStore.ts  flowStore.ts
frontend/src/types/: flow.ts
(+8 files in other folders)
